Create the skelletal Layout

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,27 @@
         <title>Document</title>
     </head>
     <body>
-        Test
+        <header>
+            <h1>DO IT YOURSELF</h1>
+        </header>
+        <div class="content">
+            <aside>
+                <div class="sidebar-group">
+                    <h2>Home</h2>
+                    <button class="add-button">Add Todo</button>
+                    <button class="container-button">General</button>
+                    <button class="container-button">Today</button>
+                    <button class="container-button">Done</button>
+                </div>
+                <div class="sidebar-group">
+                    <h2>My Projects</h2>
+                    <button class="add-button">Add Todo</button>
+                    <button class="container-button">Gym</button>
+                    <button class="container-button">Uni</button>
+                    <button class="container-button">Work</button>
+                </div>
+            </aside>
+            <section></section>
+        </div>
     </body>
 </html>
