--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
                 <div class="sidebar-group">
                     <h2>Home</h2>
                     <button class="add-button">Add Todo</button>
-                    <button class="container-button">General</button>
+                    <button class="container-button">All</button>
                     <button class="container-button">Today</button>
                     <button class="container-button">Done</button>
                 </div>
