--- a/src/template.html
+++ b/src/template.html
@@ -24,9 +24,9 @@
                         Add Project
                     </button>
                     <div class="project-container" id="project-container">
-                        <button class="container-button">Gym</button>
-                        <button class="container-button">Uni</button>
-                        <button class="container-button">Work</button>
+                        <div class="project">
+                            <button class="container-button">Gym</button>
+                        </div>
                     </div>
                 </div>
             </aside>
