--- a/src/template.html
+++ b/src/template.html
@@ -14,9 +14,21 @@
                 <div class="sidebar-group">
                     <h2>Home</h2>
                     <div class="collection-container">
-                        <button id="all" class="container-button">All</button>
-                        <button id="today" class="container-button">Today</button>
-                        <button id="done" class="container-button">Done</button>
+                        <div class="collection">
+                            <button id="all" class="container-button">
+                                All
+                            </button>
+                        </div>
+                        <div class="collection">
+                            <button id="today" class="container-button">
+                                Today
+                            </button>
+                        </div>
+                        <div class="collection">
+                            <button id="done" class="container-button">
+                                Done
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="sidebar-group">
@@ -25,8 +37,7 @@
                         Add Project
                     </button>
                     <div class="project-container" id="project-container">
-                        <div class="project">
-                        </div>
+                        <div class="project"></div>
                     </div>
                 </div>
             </aside>
@@ -37,32 +48,36 @@
         </div>
         <dialog id="create-project">
             <form>
-                <label for="name">name</label>
-                <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Project Name"
-                    required
-                    maxlength="10"
-                />
+                <div class="form-row">
+                    <label for="name">name</label>
+                    <input
+                        type="text"
+                        name="name"
+                        id="name"
+                        placeholder="Project Name"
+                        required
+                        maxlength="10"
+                    />
+                </div>
                 <button>Create Project</button>
             </form>
         </dialog>
         <dialog id="change-project">
             <form>
-                <label for="name">name</label>
-                <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    required
-                    maxlength="10"
-                />
+                <div class="form-row">
+                    <label for="name">name</label>
+                    <input
+                        type="text"
+                        name="name"
+                        id="name"
+                        required
+                        maxlength="10"
+                    />
+                </div>
                 <button>Change Name</button>
             </form>
         </dialog>
-        <dialog id="create-todo">
+        <dialog id="create-todo" >
             <form>
                 <div class="form-row">
                     <label for="name">Todo Name</label>
